# research-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  qemu-setup.sh
benchmark/: bench.sh  fdp.fio  plot.py  run_bench.sh  waf.py
benchmark/2024_11_14/: fdp_4096_0_128_1.txt  fdp_4096_0_128_16.txt  fdp_4096_0_128_2.txt  fdp_4096_0_128_32.txt  fdp_4096_0_128_4.txt  fdp_4096_0_128_8.txt  fdp_4096_0_16_1.txt  fdp_4096_0_16_16.txt  fdp_4096_0_16_2.txt  fdp_4096_0_16_32.txt  fdp_4096_0_16_4.txt  fdp_4096_0_16_8.txt  fdp_4096_0_1_1.txt  fdp_4096_0_1_16.txt  fdp_4096_0_1_2.txt  fdp_4096_0_1_32.txt  fdp_4096_0_1_4.txt  fdp_4096_0_1_8.txt  fdp_4096_0_2_1.txt  fdp_4096_0_2_16.txt  fdp_4096_0_2_2.txt  fdp_4096_0_2_32.txt  fdp_4096_0_2_4.txt  fdp_4096_0_2_8.txt  fdp_4096_0_32_1.txt  fdp_4096_0_32_16.txt  fdp_4096_0_32_2.txt  fdp_4096_0_32_32.txt  fdp_4096_0_32_4.txt  fdp_4096_0_32_8.txt  fdp_4096_0_4_1.txt  fdp_4096_0_4_16.txt  fdp_4096_0_4_2.txt  fdp_4096_0_4_32.txt  fdp_4096_0_4_4.txt  fdp_4096_0_4_8.txt  fdp_4096_0_64_1.txt  fdp_4096_0_64_16.txt  fdp_4096_0_64_2.txt  fdp_4096_0_64_32.txt  (+56 more)
benchmark/2024_12_09/: test_nonfdp_4096_0_1_1.txt  test_nonfdp_4096_0_1_16.txt  test_nonfdp_4096_0_1_2.txt  test_nonfdp_4096_0_1_4.txt  test_nonfdp_4096_0_1_8.txt  test_nonfdp_4096_0_2_1.txt  test_nonfdp_4096_0_2_16.txt  test_nonfdp_4096_0_2_2.txt  test_nonfdp_4096_0_2_4.txt  test_nonfdp_4096_0_2_8.txt  test_nonfdp_4096_0_4_1.txt  test_nonfdp_4096_0_4_16.txt  test_nonfdp_4096_0_4_2.txt  test_nonfdp_4096_0_4_4.txt  test_nonfdp_4096_0_4_8.txt
benchmark/2024_12_12/: test_fdp_4096_0_1_1.txt  test_fdp_4096_0_1_16.txt  test_fdp_4096_0_1_2.txt  test_fdp_4096_0_1_4.txt  test_fdp_4096_0_1_8.txt  test_fdp_4096_0_2_1.txt  test_fdp_4096_0_2_16.txt  test_fdp_4096_0_2_2.txt  test_fdp_4096_0_2_4.txt  test_fdp_4096_0_2_8.txt  test_fdp_4096_0_4_1.txt  test_fdp_4096_0_4_16.txt  test_fdp_4096_0_4_2.txt  test_fdp_4096_0_4_4.txt  test_fdp_4096_0_4_8.txt  test_nonfdp_4096_0_1_1.txt  test_nonfdp_4096_0_1_16.txt  test_nonfdp_4096_0_1_2.txt  test_nonfdp_4096_0_1_4.txt  test_nonfdp_4096_0_1_8.txt  test_nonfdp_4096_0_2_1.txt  test_nonfdp_4096_0_2_16.txt  test_nonfdp_4096_0_2_2.txt  test_nonfdp_4096_0_2_4.txt  test_nonfdp_4096_0_2_8.txt  test_nonfdp_4096_0_4_1.txt  test_nonfdp_4096_0_4_16.txt  test_nonfdp_4096_0_4_2.txt  test_nonfdp_4096_0_4_4.txt  test_nonfdp_4096_0_4_8.txt  tester
docs/duckdb/: buffer-manager.md  file-system.md  io-management.md
docs/fdp/: cachelib-fdp-impl.md  fdp-topo.drawio  fdp.md  fio.md  native-io_uring-fdp.md
docs/supervision/: meeting_01_samsung.md  week-02.md  week-03.md  week-04-05.md  week-07.md  week-08.md  week-09.md  week-10.md
log/: week-01.md
src/cp/: CMakeLists.txt  main.cpp
src/cp/include/ioring/: ioring.hpp  ioring_manager.hpp
src/cp/ioring/: CMakeLists.txt  ioring_manager.cpp
src/db/: CMakeLists.txt  main.cpp
src/include/: CMakeLists.txt  stupid.cpp  stupid.hpp  stupid2.cpp  stupid2.hpp
src/io/: CMakeLists.txt  main.cpp  program.cpp
src/scripts/: install_server.sh
